--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "js-yaml": "^4.1.0",
     "remeda": "^2.20.1",
     "yargs": "^17.7.2",
+    "tsup": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
