--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsup --dts",
+    "build": "node_modules/.bin/tsup src/index.ts --out-dir dist",
     "type-check": "tsc --noEmit",
     "test": "jest",
-    "start": "node dist/cli.js",
+    "start": "node dist/index.js"
     "start:cli": "cross-env NODE_ENV=cli node dist/cli.js",
     "start:http": "node dist/cli.js",
     "dev": "cross-env NODE_ENV=development tsup --watch",
