--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "node_modules/.bin/tsup src/index.ts --out-dir dist",
+    "build": "tsup",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "start": "node dist/index.js",
@@ -48,9 +48,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "js-yaml": "^4.1.0",
+    "openai": "^4.95.1",
     "remeda": "^2.20.1",
-    "yargs": "^17.7.2",
     "tsup": "^7.2.0",
+    "yargs": "^17.7.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
