--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@figma/rest-api-spec": "^0.24.0",
     "@modelcontextprotocol/sdk": "^1.10.1",
     "@types/yargs": "^17.0.33",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
